# phoneblock

./: .gitignore  .mcp.json  .project  CARDDAV-OPTIMIZATION-PLAN.md  CLAUDE.md  COPYRIGHT  INTEGRATIONS.md  JNDI-CONFIGURATION.md  README.md  RELEASE-NOTES.md  pom.xml
.claude/: settings.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: dongle-test-report.yml
.github/workflows/: release.yml  test.yml
cloud-settings/: setup.sh  setup.yaml
docs/plans/: 2026-03-07-blocklist-add-and-wildcard-design.md  2026-03-07-blocklist-add-and-wildcard.md  2026-03-07-detect-preexisting-answerbot-design.md  (+22 more)
fake-mail-check/: .classpath  .gitignore  .project  README.md  mailcheck.sh  pom.xml
fastlane/: README.md
glossary/: de-en.tsv
phoneblock/: .classpath  .gitignore  .phoneblock.template  .project  dkim.md  dkim.txt  package-lock.json  package.json  pom.xml
phoneblock-ab/: .classpath  .gitignore  .phoneblock.docker  .phoneblock.template  .project  Docker-Multi-Plattform.md  Dockerfile  README.md  RETENTION_POLICY_IMPLEMENTATION.md  compose.yaml  database_migration.sql  docker-entrypoint.sh  pom.xml
phoneblock-accounting/: .gitignore  .phoneblock-accounting.template  README.md  phoneblock-accounting.sh  pom.xml
phoneblock-dongle/: .project  ERROR_CODES.md  EXTENDED_SIP.md  FUTURE.md  GETTING_STARTED.md  HARDWARE.md  LEGAL.md  PROGRESS.md  PROVIDERS.md  README.md  RELEASE.md  routers.md
phoneblock-dongle/firmware/: .gitignore  CLAUDE.md  CMakeLists.txt  I18N-PLAN.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.local.fritzbox  sdkconfig.defaults.local.handy  sdkconfig.defaults.local.template
phoneblock-dongle/firmware/docs/: network-access-control.md
phoneblock-dongle/firmware/i18n/: README.md  gen-ui-de-arb.js  languages.txt
phoneblock-dongle/firmware/i18n/audio/: announcement-ar.alaw  announcement-de.alaw  announcement-de.txt  announcement-en.alaw  announcement-es.alaw  announcement-fr.alaw  announcement-it.alaw  announcement-uk.alaw  announcement-zh.alaw
phoneblock-dongle/firmware/i18n/l10n/: settings.gradle
phoneblock-dongle/firmware/i18n/l10n/mail/: build.gradle  mail_ar.arb  mail_da.arb  mail_de.arb  mail_el.arb  mail_en.arb  mail_es.arb  mail_fr.arb  mail_it.arb  mail_nb.arb  mail_nl.arb  mail_pl.arb  mail_sv.arb  mail_uk.arb  mail_zh.arb
phoneblock-dongle/firmware/i18n/l10n/ui/: build.gradle  ui_ar.arb  ui_da.arb  ui_de.arb  ui_el.arb  ui_en.arb  ui_es.arb  ui_fr.arb  ui_it.arb  ui_nb.arb  ui_nl.arb  ui_pl.arb  ui_sv.arb  ui_uk.arb  ui_zh.arb
phoneblock-dongle/firmware/main/: CMakeLists.txt  Kconfig.projbuild  announcement.c  announcement.h  api.c  api.h  api_scan.c  api_scan.h  audio.c  audio.h  banned_apis.h  blocklist_lookup.c  blocklist_lookup.h  blocklist_sync.c  blocklist_sync.h  config.c  config.h  conversation.c  conversation.h  crashreport.c  crashreport.h  firmware_update.c  firmware_update.h  http_util.c  http_util.h  i18n_sync.c  i18n_sync.h  idf_component.yml  improv.c  improv.h  improv_proto.c  improv_proto.h  log_capture.c  log_capture.h  logreport.c  logreport.h  mail.c  mail.h  mail_html.c  mail_html.h  (+67 more)
phoneblock-dongle/firmware/main/audio/: README.md  am-aparat.alaw  announcement.alaw  ask-question-1.alaw  ask-question-2.alaw  ask-question-3.alaw  cant-hear-you.alaw  convert.sh  hello.alaw  who-is-there.alaw
phoneblock-dongle/firmware/main/web/: index.html
phoneblock-dongle/firmware/release-notes/: 1.0.0.md  1.0.1.md  1.0.10.md  1.0.2.md  1.0.3.md  1.0.4.md  1.0.5.md  1.0.6.md  1.0.7.md  1.0.8.md  1.0.9.md  1.1.0.md  1.2.0.md  1.2.1.md  1.2.2.md  1.3.0.md  1.3.1.md  1.3.2.md  1.3.3.md  1.3.4.md  1.3.5.md  1.3.6.md  1.4.0.md  1.4.1.md  1.4.2.md  1.5.0.md  1.5.1.md  README.md
phoneblock-dongle/firmware/scripts/: fake-call.py  htaccess.cors  i18n-assets.sh  manifest.json.tmpl  mirror-installer-deps.sh  release.settings.template  release.sh  sign-manifest-with-key.sh  sign-manifest.sh  verify-manifest.sh
phoneblock-dongle/firmware/scripts/i18n/: README.md  announcement.de.txt  extract-de-ui.js  gen-ui-de-arb.js  languages.txt  mail.de.json  public.pem
phoneblock-dongle/firmware/scripts/i18n/l10n/: settings.gradle
phoneblock-dongle/firmware/scripts/i18n/l10n/mail/: build.gradle  mail_ar.arb  mail_da.arb  mail_de.arb  mail_el.arb  mail_en.arb  mail_es.arb  mail_fr.arb  mail_it.arb  mail_nb.arb  mail_nl.arb  mail_pl.arb  mail_sv.arb  mail_uk.arb  mail_zh.arb
phoneblock-dongle/firmware/scripts/i18n/l10n/ui/: build.gradle  ui_de.arb  ui_el.arb  ui_en.arb  ui_es.arb  ui_fr.arb  ui_nb.arb  ui_pl.arb
phoneblock-dongle/firmware/scripts/i18n/ui/: lang-en.json  lang-es.json  lang-fr.json
phoneblock-dongle/firmware/test/: .gitignore  Makefile  README.md  test-signing-roundtrip.sh  test_api_scan.c  test_blocklist_lookup.c  test_improv_proto.c  test_log_capture.c  test_mail_html.c  test_net_local.c  test_pairing_parse.c  test_phone_norm.c  test_sched_time.c  test_sip_auth.c  test_sip_frame.c  test_sip_parse.c  test_sip_response.c  test_sip_srv.c  test_smtp_body.c  test_strbuf.c  test_tr064_parse.c  test_vad.c  test_version_cmp.c
phoneblock-shared/: .classpath  .gitignore  .project  pom.xml
phoneblock-tools/: .classpath  .gitignore  .phoneblock-classifier.template  .project  pom.xml
phoneblock-translate-maven-plugin/: .gitignore  pom.xml
phoneblock-watchdog/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go  phoneblock-watchdog
phoneblock_answerbot_ui/: .metadata  README.md  pubspec.yaml
phoneblock_mobile/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  assetlinks.json  build.gradle  gradle.properties  gradlew  l10n.yaml  pubspec.yaml  settings.gradle
phoneblock_shared/: .gitignore  .metadata  pubspec.yaml  settings.gradle
release-notes/: 1.7.10.md  1.7.11.md  1.7.12.md  1.7.13.md  1.7.14.md  1.7.15.md  1.7.16.md  1.7.4.md  1.7.5.md  1.7.6.md  1.7.7.md  1.7.8.md  1.7.9.md  1.8.0.md  1.8.1.md  1.8.2.md  1.8.3.md  1.8.4.md  1.8.5.md  1.8.6.md  1.9.0.md  1.9.1.md  1.9.2.md  1.9.3.md  1.9.4.md  2.0.0.md  3.0.0.md  3.0.1.md  3.0.2.md  3.1.0.md  3.1.1.md  3.1.2.md  README.md
(+2561 files in other folders)
